--- a/frontend/src/components/features.css
+++ b/frontend/src/components/features.css
@@ -12,6 +12,7 @@
 .features-container .product-image {
   position: relative;
   overflow: hidden;
+  text-align: center;
 }
 
 .offers-container .product-image .hidden-cta,
@@ -25,6 +26,7 @@
   height: 100%;
   transition: 1s;
   background: #000000d0;
+  box-sizing: border-box;
 }
 
 .offers-container .product-image .hidden-cta .fas,
@@ -59,7 +61,6 @@
 
 .offers-container .book-details .item-price,
 .features-container .book-details .item-price {
-  color: #74642f;
   font-size: 1.3em;
   margin-top: 10px;
   color: var(--main-color);
@@ -82,11 +83,4 @@
 .features-container .book-details p {
   color: var(--body-text-color);
   margin-block-end: 0;
-}
-
-.single-book-link {
-  color: var(--body-text-color);
-}
-.single-book-link:hover {
-  color: var(--main-bg);
 }
