--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,8 +91,8 @@ a:hover {
 }
 
 .error__div .single__page-error {
-  color: var(--main-color);
-  padding: 5px 10px;
+  color: var(--body-text-color);
+  padding: 10px 20px;
   border: 1px solid var(--main-color);
   border-radius: 3px;
   -webkit-transition: all 150ms ease-in;
