--- a/frontend/src/components/newsletter.css
+++ b/frontend/src/components/newsletter.css
@@ -1,5 +1,5 @@
 .newsletter {
-  background: var(--dark-body-color);
+  background: var(--light-body-color);
   padding: 80px 0;
   text-align: center;
 }
